// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlight parses an highlighted attribute of hit object 1`] = `
<span
  className=""
>
  <span
    className="nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="highlighted"
  >
    hi
  </em>
  <span
    className="nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="highlighted"
  >
    hi
  </em>
  <span
    className="nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlight renders a hit with a custom tag correctly 1`] = `
<span
  className=""
>
  <span
    className="nonHighlighted"
  >
    awesome 
  </span>
  <marquee
    className="highlighted"
  >
    hi
  </marquee>
  <span
    className="nonHighlighted"
  >
    ghlighted 
  </span>
  <marquee
    className="highlighted"
  >
    hi
  </marquee>
  <span
    className="nonHighlighted"
  >
    t!
  </span>
</span>
`;
